# turtini-sphinx-theme

./: README.md  pyproject.toml
src/turtini_sphinx_theme/: __init__.py
src/turtini_sphinx_theme/_static/: turtini.css
src/turtini_sphinx_theme/_templates/: layout.html  sidebar.html
